# gnome-web-photo

./: .cvsignore  .gitignore  AUTHORS  COPYING.README  ChangeLog  ChangeLog.README  HACKING  MAINTAINERS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  gnome-web-photo.doap  test
data/: .gitignore  Makefile.am  gnome-web-photo.thumbnailer  prefs.js  style.css  thumbnailer.schemas.in
m4/: gecko.m4  libxul.m4
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  es.po  fr.po  gl.po  he.po  hu.po  ja.po  ko.po  nb.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  uk.po  zh_CN.po
src/: .cvsignore  .gitignore  Components.cpp  Components.h  Embed.cpp  Embed.h  Listener.cpp  Listener.h  Makefile.am  Prefs.cpp  Prefs.h  Printer.cpp  Printer.h  Writer.cpp  Writer.h  gnome-web-photo.c  main.cpp  photo-offscreen-window.c  photo-offscreen-window.h
